// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmInfoRow should match snapshot 1`] = `
<div>
  <div
    class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <div
      class="flex-row items-start justify-start flex text-alternative"
      style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
    >
      <div
        class="items-center flex"
        style="flex-shrink: 0;"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          some label
        </p>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Some text
    </p>
  </div>
</div>
`;

exports[`ConfirmInfoRow should match snapshot for Small rowVariant 1`] = `
<div>
  <div
    class="flex-row flex-wrap items-center justify-between mt-0 mb-0 pr-0 pl-0 flex confirm-info-row rounded-lg text-default"
    style="overflow-wrap: anywhere; position: relative;"
  >
    <div
      class="flex-row items-center justify-start flex text-alternative"
      style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
    >
      <div
        class="items-center flex"
        style="flex-shrink: 0;"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          Transaction Fee
        </p>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      $0.50
    </p>
  </div>
</div>
`;

exports[`ConfirmInfoRow should match snapshot when copy is enabled 1`] = `
<div>
  <div
    class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <button
      aria-label="copy-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
      style="cursor: pointer; position: absolute; right: 4px; top: 2px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/copy.svg');"
      />
    </button>
    <div
      class="flex-row items-start justify-start pr-6 flex text-alternative"
      style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
    >
      <div
        class="items-center flex"
        style="flex-shrink: 0;"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          some label
        </p>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Some text
    </p>
  </div>
</div>
`;

exports[`ConfirmInfoRowSkeleton should match snapshot 1`] = `
<div>
  <div
    class="flex-row flex-wrap items-center justify-between mt-0 mb-0 pr-0 pl-0 flex confirm-info-row rounded-lg text-default"
    data-testid="test-skeleton"
    style="overflow-wrap: anywhere; position: relative;"
  >
    <div
      class="flex-row items-center justify-start flex text-alternative"
      style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
    >
      <div
        class="items-center flex"
        style="flex-shrink: 0;"
      >
        <div
          class="mm-box mm-skeleton mm-box--background-color-icon-alternative mm-box--rounded-sm"
          style="margin-top: 3px; margin-bottom: 3px; height: 18px; width: 80px;"
        />
      </div>
    </div>
    <div
      class="mm-box mm-skeleton mm-box--background-color-icon-alternative mm-box--rounded-sm"
      style="margin-top: 3px; margin-bottom: 3px; height: 18px; width: 80px;"
    />
  </div>
</div>
`;
